completed MaxBothSigns